--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
 
 body{
 	font-family: 'Roboto', sans-serif;
+	direction: rtl;
 }
 * {
 	margin: 0;
@@ -107,6 +108,12 @@ body{
 	bottom: 0;
     left: -25px;
 }
+
+/*---------- typography ------------*/
+/* .typography-page-tite{
+	font-weight: 700;
+	font-size: 40px;
+} */
 
 
 @media(min-width: 992px){
