--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,3 +50,20 @@ label {
   font-weight: 600;
   color: rgb(34, 34, 34);
 }
+
+.btn-orange ,.btn:disabled{
+  background-color: #FF8A00;
+  color: #ffffff;
+  --bs-btn-font-weight: 600;
+--bs-btn-color: var(--bs-white);
+--bs-btn-bg: var(--bd-violet-bg);
+--bs-btn-border-color: var(--bd-violet-bg);
+--bs-btn-hover-color: var(--bs-white);
+--bs-btn-hover-bg: #ff9f31;
+--bs-btn-hover-border-color: #FF8A00;
+--bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+--bs-btn-active-color: var(--bs-btn-hover-color);
+--bs-btn-active-bg: #FF8A00;
+--bs-btn-active-border-color: #FF8A00;
+
+}
