--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,6 +57,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
+  font-size: 14px;
 }
 .profile-tags img {
   width: 25px;
@@ -76,9 +78,15 @@
   font-weight: 600;
 }
 .review .review-content {
-  font-weight: 15px;
+  font-size: 15px;
   font-weight: 400;
-  line-height: 1, 2em;
+  line-height: 1.2em;
+  margin-bottom: 0;
+}
+.review .rev-date {
+  font-size: 12px;
+  color: #c3c3c3;
+  margin-top: 7px;
 }
 .review .profile-img {
   max-width: 90px;
@@ -99,6 +107,17 @@
 }
 .review .profile-img .circle-stroke img {
   width: 110%;
+}
+
+.err-msg-container {
+  position: relative;
+  height: 5px;
+}
+.err-msg-container .msg {
+  position: absolute;
+  top: -3px;
+  height: 0;
+  display: block;
 }
 
 body {
