--- a/client/src/partials/style/small/_profile.scss
+++ b/client/src/partials/style/small/_profile.scss
@@ -61,6 +61,8 @@
 .profile-tags {
     @include display-flex-center;
     flex-direction: column;
+    text-align: center;
+    font-size: 14px;
 
     img{
         width: 25px;
@@ -85,9 +87,16 @@
     }
 
     .review-content{
-        font-weight: 15px;
+        font-size: 15px;
         font-weight: 400;
-        line-height: 1,2em;
+        line-height: 1.2em;
+        margin-bottom: 0;
+    }
+
+    .rev-date{
+        font-size: 12px;
+        color: #c3c3c3;
+        margin-top: 7px;
     }
 
     .profile-img{
@@ -111,3 +120,4 @@
         }
     }
 }
+
